--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -67,7 +67,7 @@ extends:
                 inputs:
                   artifactName: SBom-$(System.JobAttempt)
                   targetPath: $(System.DefaultWorkingDirectory)/_manifest
-              - template: ./steps/pierce-ado-npm-mirror-cache.yml
+              - template: .azure-devops/steps/pierce-ado-npm-mirror-cache.yml@self
                 parameters:
                   adoNpmFeedPat: $(adoNpmFeedPat)
                   adoOrgBaseUrl: $(adoProjectBaseUrl)
