--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "graphql": "^15.0.0",
-    "beachball": "^2.20.0",
+    "beachball": "^2.47.1",
     "lage": "^2.7.14",
     "patch-package": "^6.4.7",
     "prettier": "^2.8.7",
@@ -37,6 +37,9 @@
     "minimist": "^1.2.6",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
-    "trim": "^1.0.1"
+    "trim": "^1.0.1",
+    "@babel/traverse": "^7.23.0",
+    "micromatch": "^4.0.8",
+    "braces": "^3.0.3"
   }
 }
