--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "yarn generate-resolver-typings && concurrently \"yarn duct-tape-compiler --watch\" \"yarn serve\"",
     "serve": "webpack serve",
-    "build": "webpack",
+    "build": "yarn duct-tape-compiler && webpack",
     "duct-tape-compiler": "duct-tape-compiler --schema ./data/schema.graphql --src ./src --emitQueryDebugComments",
     "generate-resolver-typings": "graphql-codegen --config codegen.yml"
   },
