--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -2,6 +2,7 @@ pr: none
 trigger:
   - main
   - alloy/relay-apollo-duct-tape
+  - jvejr/context-and-async-hooks-alpha
 
 variables:
   - group: InfoSec-SecurityResults
