--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/cli",
   "license": "MIT",
-  "version": "1.12.1",
+  "version": "1.13.0-alpha.0",
   "bin": {
     "supermassive": "./bin/supermassive.js"
   },
