--- a/packages/webpack-loader/package.json
+++ b/packages/webpack-loader/package.json
@@ -17,7 +17,7 @@
   },
   "peerDependencies": {
     "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
-    "@graphitation/supermassive": "^3.7.2"
+    "@graphitation/supermassive": "^3.8.0-alpha.1"
   },
   "dependencies": {
     "@graphql-tools/optimize": "^1.1.1",
