--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -18,7 +18,7 @@
     "@graphitation/apollo-react-relay-duct-tape": "^1.3.10",
     "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.6.8",
     "@graphitation/graphql-js-tag": "^0.9.4",
-    "@graphitation/supermassive": "^3.7.1",
+    "@graphitation/supermassive": "^3.8.0-alpha.1",
     "@graphitation/ts-transform-graphql-js-tag": "^1.4.4",
     "concurrently": "^6.5.1",
     "graphql": "^15.6.1",
