Revert "adding realese config"
This reverts commit 75c33b3aa2dac2e6d295da8c554bde13de904112.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "beachball": "beachball -b origin/jvejr/supermassive-hooks-error-handling-alpha",
     "change": "yarn beachball change",
     "checkchange": "yarn beachball check",
-    "release": "yarn beachball publish -t alpha",
+    "release": "yarn beachball publish -t latest",
     "postinstall": "patch-package"
   },
   "devDependencies": {
