--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "lage lint --continue",
     "lage": "lage",
     "ci": "yarn lage build types test lint && yarn checkchange",
-    "beachball": "beachball -b origin/jvejr/supermassive-hooks-error-handling-alpha",
+    "beachball": "beachball -b origin/main",
     "change": "yarn beachball change",
     "checkchange": "yarn beachball check",
     "release": "yarn beachball publish -t latest",
