--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -42,7 +42,7 @@
   },
   "peerDependencies": {
     "graphql": "^15.0.0",
-    "@graphitation/supermassive": "^3.7.2",
+    "@graphitation/supermassive": "^3.8.0-alpha.4",
     "typescript": "^5.5.3"
   },
   "publishConfig": {
