--- a/packages/ts-codegen/package.json
+++ b/packages/ts-codegen/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
-    "directory": "packages/graphql-codegen"
+    "directory": "packages/ts-codegen"
   },
   "scripts": {
     "build": "monorepo-scripts build",
