--- a/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
+++ b/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
@@ -16,6 +16,7 @@ parameters:
 
 steps:
   - bash: |
+      git fetch --all
       git checkout main
       git diff --name-only HEAD HEAD~1 | grep 'packages/.*/package.json' | while read pkgFilename ; do
         pkgName=`cat $pkgFilename | jq -r '.name'`
