--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -20,7 +20,7 @@
     "duct-tape-compiler": "yarn duct-tape-compiler:compiled-hooks && yarn duct-tape-compiler:noop-hooks"
   },
   "devDependencies": {
-    "@apollo/client": ">= ^3.3.0 < 3.7.0",
+    "@apollo/client": "3.8.1",
     "@graphitation/apollo-mock-client": "^0.11.10",
     "@graphitation/graphql-js-operation-payload-generator": "^0.12.10",
     "@graphitation/graphql-js-tag": "^0.9.4",
@@ -34,7 +34,6 @@
     "ts-expect": "^1.3.0"
   },
   "peerDependencies": {
-    "@apollo/client": ">= ^3.3.0 < 3.7.0",
     "graphql": "^15.0.0",
     "react": "^18.2.0"
   },
