--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -9,10 +9,8 @@ variables:
     value: production,externalfacing
   - name: serviceTreeID
     value: ade7d667-42f5-485a-91a9-f1dc6482a9b0
-  - name: adoOrgBaseUrl
-    value: https://pkgs.dev.azure.com/domoreexp
-  - name: adoNpmFeedName
-    value: npm-mirror
+  - name: adoNpmFeedBaseUrl
+    value: https://pkgs.dev.azure.com/DomoreexpGithub/_packaging/GraphQL/npm/registry/
 
 resources:
   repositories:
@@ -62,15 +60,21 @@ extends:
                   git config user.name "Graphitation Service Account"
                   git fetch --depth=2
                 displayName: Configure git for release
-              - script: yarn release -y -n $(ossNpmToken) --access public
-                displayName: Release
+              - script: yarn release -y -n $(ossNpmToken) --access public --no-push --keep-change-files
+                displayName: Release to the npm registry
+              - script: |
+                  git restore .
+                displayName: Discard beachball's changes
+              - script: |
+                  echo "always-auth=true" > .npmrc
+                  echo "registry=$(adoNpmFeedBaseUrl)" >> .npmrc
+              - task: npmAuthenticate@0
+                inputs:
+                  workingFile: ".npmrc"
+              - script: yarn release -y --registry $(adoNpmFeedBaseUrl)
+                displayName: Release to the ado npm feed
               - task: 1ES.PublishPipelineArtifact@1
                 displayName: 📒 Publish Manifest
                 inputs:
                   artifactName: SBom-$(System.JobAttempt)
                   targetPath: $(System.DefaultWorkingDirectory)/_manifest
-              - template: .azure-devops/steps/pierce-ado-npm-mirror-cache.yml@self
-                parameters:
-                  adoNpmFeedPat: $(adoNpmFeedPat)
-                  adoOrgBaseUrl: $(adoProjectBaseUrl)
-                  adoNpmFeedName: $(adoNpmFeedName)
