--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -1,7 +1,8 @@
 pr: none
 trigger:
-  - main
-  - alloy/relay-apollo-duct-tape
+  branches:
+    include:
+      - "*"
 
 variables:
   - group: InfoSec-SecurityResults
@@ -60,18 +61,7 @@ extends:
                   git config user.name "Graphitation Service Account"
                   git fetch --depth=2
                 displayName: Configure git for release
-              - script: yarn release -y -n $(ossNpmToken) --access public --no-push --keep-change-files
-                displayName: Release to the npm registry
-              - script: |
-                  git restore .
-                displayName: Discard beachball's changes
-              - script: |
-                  echo "always-auth=true" > .npmrc
-                  echo "registry=$(adoNpmFeedBaseUrl)" >> .npmrc
-              - task: npmAuthenticate@0
-                inputs:
-                  workingFile: ".npmrc"
-              - script: yarn release -y --registry $(adoNpmFeedBaseUrl)
+              - script: yarn release -y --registry $(adoNpmFeedBaseUrl) --prerelease-prefix "microsoft" --no-push --keep-change-files
                 displayName: Release to the ado npm feed
               - task: 1ES.PublishPipelineArtifact@1
                 displayName: 📒 Publish Manifest
