--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/cli",
   "license": "MIT",
-  "version": "2.0.0",
+  "version": "2.1.0-alpha.0",
   "bin": {
     "supermassive": "./bin/supermassive.js"
   },
