--- a/website/package.json
+++ b/website/package.json
@@ -41,7 +41,8 @@
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
     "nth-check": "^2.0.1",
-    "trim": "^1.0.1"
+    "trim": "^1.0.1",
+    "katex": "^0.16.22"
   },
   "browserslist": {
     "production": [
