--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.2.2",
     "@graphql-codegen/import-types-preset": "^2.1.7",
-    "@graphql-codegen/typescript": "^2.3.0",
+    "@graphql-codegen/typescript": "4.1.6",
     "@types/graphql": "^14.5.0",
     "@types/lodash": "^4.14.175",
     "@types/react": "^18.2.29",
