--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "test": "lage test --continue",
     "lint": "lage lint --continue",
     "lage": "lage",
-    "ci": "yarn lage build types test lint && yarn checkchange",
-    "beachball": "beachball -b origin/main",
+    "ci": "yarn lage build",
+    "beachball": "beachball -b user/pavelglac/bump-graphql-codegen",
     "change": "yarn beachball change",
     "checkchange": "yarn beachball check",
-    "release": "yarn beachball publish -t latest",
+    "release": "yarn beachball publish -t alpha --prerelease-prefix alpha",
     "postinstall": "patch-package"
   },
   "devDependencies": {
