--- a/packages/apollo-mock-client/package.json
+++ b/packages/apollo-mock-client/package.json
@@ -2,7 +2,7 @@
   "name": "@graphitation/apollo-mock-client",
   "description": "An Apollo Client that allows mocking of payloads in response to operations, rather than having to provide them all upfront.",
   "license": "MIT",
-  "version": "0.12.0",
+  "version": "0.12.1-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@apollo/client": ">= ^3.3.0 < 3.7.0",
     "@graphitation/graphql-js-tag": "^0.10.0",
-    "@graphitation/graphql-js-operation-payload-generator": "^0.13.0",
+    "@graphitation/graphql-js-operation-payload-generator": "^0.13.1-alpha.0",
     "@types/invariant": "^2.2.34",
     "@types/jest": "^26.0.22",
     "@types/react": "^18.2.29",
