--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -2,7 +2,7 @@
   "name": "@graphitation/apollo-react-relay-duct-tape",
   "description": "A compatibility wrapper that provides the react-relay API on top of Apollo Client.",
   "license": "MIT",
-  "version": "1.4.3",
+  "version": "1.4.4-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
@@ -21,8 +21,8 @@
   },
   "devDependencies": {
     "@apollo/client": ">= ^3.3.0 < 3.7.0",
-    "@graphitation/apollo-mock-client": "^0.12.0",
-    "@graphitation/graphql-js-operation-payload-generator": "^0.13.0",
+    "@graphitation/apollo-mock-client": "^0.12.1-alpha.0",
+    "@graphitation/graphql-js-operation-payload-generator": "^0.13.1-alpha.0",
     "@graphitation/graphql-js-tag": "^0.10.0",
     "@types/jest": "^26.0.22",
     "@types/lodash": "^4.14.176",
@@ -30,7 +30,7 @@
     "graphql": "^15.0.0",
     "monorepo-scripts": "*",
     "react": "^18.2.0",
-    "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.7.1",
+    "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.7.2-alpha.0",
     "ts-expect": "^1.3.0"
   },
   "peerDependencies": {
