--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/cli",
   "license": "MIT",
-  "version": "2.1.1",
+  "version": "2.1.2-alpha.0",
   "bin": {
     "supermassive": "./bin/supermassive.js"
   },
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@graphitation/supermassive-extractors": "^2.3.0",
-    "@graphitation/ts-codegen": "^4.0.0",
+    "@graphitation/ts-codegen": "^4.0.1-alpha.0",
     "commander": "^8.3.0",
     "fast-glob": "^3.2.12",
     "graphql": "^15.6.1"
