--- a/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/graphql-codegen-supermassive-schema-extraction-plugin",
   "license": "MIT",
-  "version": "2.1.1",
+  "version": "2.1.2-alpha.0",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
     "@graphql-codegen/plugin-helpers": "^5.0.2"
   },
   "dependencies": {
-    "@graphitation/supermassive": "^3.10.1",
+    "@graphitation/supermassive": "^3.10.2-alpha.0",
     "graphql": "^15.0.0"
   },
   "sideEffects": false,
