--- a/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/graphql-codegen-supermassive-typed-document-node-plugin",
   "license": "MIT",
-  "version": "1.1.1",
+  "version": "1.1.2-alpha.0",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
@@ -29,7 +29,7 @@
     "@graphql-codegen/visitor-plugin-common": "^5.0.0",
     "graphql-tag": ">= 2.11.0 < 3",
     "@graphql-tools/optimize": "^1.0.1",
-    "@graphitation/supermassive": "^3.10.1"
+    "@graphitation/supermassive": "^3.10.2-alpha.0"
   },
   "sideEffects": false,
   "access": "public",
