--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/supermassive",
   "license": "MIT",
-  "version": "3.10.1",
+  "version": "3.10.2-alpha.0",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
