--- a/packages/graphql-codegen-near-operation-file-preset-with-resolver-metadata/package.json
+++ b/packages/graphql-codegen-near-operation-file-preset-with-resolver-metadata/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@graphitation/graphql-codegen-near-operation-file-preset",
+  "name": "@graphitation/graphql-codegen-near-operation-file-preset-with-resolver-metadata",
   "license": "MIT",
-  "version": "1.9.0",
+  "version": "1.0.0",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "^1.18.2",
     "@graphql-codegen/visitor-plugin-common": "^1.17.22",
+    "@graphql-codegen/near-operation-file-preset": "1.17.13",
     "@graphql-codegen/add": "^2.0.2",
     "parse-filepath": "^1.0.2",
     "tslib": "~2.0.1"
