--- a/packages/apollo-forest-run-benchmarks/package.json
+++ b/packages/apollo-forest-run-benchmarks/package.json
@@ -21,13 +21,11 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
-    "@types/node": "^20.0.0",
-    "@types/yargs": "^17.0.13",
+    "@types/node": "^12.0.0",
     "monorepo-scripts": "*",
     "ts-node": "^10.0.0",
     "tslib": "^2.4.0",
-    "typescript": "^5.5.3",
-    "yargs": "^16.2.0"
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "@apollo/client": ">= ^3.3.0 < 3.7.0",
