--- a/.github/workflows/forest-run-benchmark.yml
+++ b/.github/workflows/forest-run-benchmark.yml
@@ -83,11 +83,11 @@ jobs:
             if (reportPath && fs.existsSync(reportPath)) {
               const markdownContent = fs.readFileSync(reportPath, 'utf8');
               
-              // Find existing benchmark comment to update or create new one
+              // Find existing benchmark comment on this PR to update or create new one
               const { data: comments } = await github.rest.issues.listComments({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: context.issue.number,
+                issue_number: context.payload.pull_request.number,
               });
               
               const botComment = comments.find(comment => 
@@ -111,14 +111,14 @@ jobs:
                 });
                 console.log('Updated existing benchmark comment');
               } else {
-                // Create new comment
+                // Create new comment on PR
                 await github.rest.issues.createComment({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
-                  issue_number: context.issue.number,
+                  issue_number: context.payload.pull_request.number,
                   body: commentBody
                 });
-                console.log('Created new benchmark comment');
+                console.log('Created new benchmark comment on PR');
               }
             } else {
               console.log('No benchmark report markdown file found in', benchmarkDir);
